<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.cubidevs.mislibros.ui.list.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_navigation_create"
            app:destination="@id/navigation_create" />
        <action
            android:id="@+id/action_navigation_list_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cubidevs.mislibros.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_update"
        android:name="com.cubidevs.mislibros.ui.update.UpdateFragment"
        android:label="@string/udpate"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.cubidevs.mislibros.ui.delete.DeleteFragment"
        android:label="@string/delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.cubidevs.mislibros.ui.login.LogInFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_log_in" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_signup"
            app:destination="@id/navigation_signup" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.cubidevs.mislibros.ui.signup.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_signup_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.cubidevs.mislibros.ui.create.CreateFragment"
        android:label="@string/create_book"
        tools:layout="@layout/fragment_create" />
    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.cubidevs.mislibros.ui.detail.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="book"
            app:argType="com.cubidevs.mislibros.model.Book" />
    </fragment>
</navigation>